<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstpart.movie.popmovie1_yohan.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="130dp"
                android:layout_height="177dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/description_movie_poster"
                app:srcCompat="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="36dp"
                android:text="@string/example_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textview_original_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_original_title" />

            <TextView
                android:id="@+id/textview_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/example_original_title"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/imageview_poster"
                app:layout_constraintTop_toBottomOf="@+id/imageview_poster" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="2dp"
                android:paddingStart="10dp"
                android:text="@string/example_release_date"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/imageview_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_release_date_title" />

            <TextView
                android:id="@+id/textview_vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                android:paddingTop="10dp"
                android:text="@string/heading_vote_average"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageview_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="2dp"
                android:paddingStart="10dp"
                android:text="@string/example_vote_average"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_poster"
                app:layout_constraintStart_toEndOf="@+id/imageview_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_vote_average_title" />

            <TextView
                android:id="@+id/textview_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/heading_release_date"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageview_poster"
                app:layout_constraintTop_toTopOf="@+id/imageview_poster" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_overview" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_overview" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_recycler_view" />

            <Button
                android:id="@+id/fav_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_favorite_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/textview_vote_average_title"
                app:layout_constraintStart_toStartOf="@+id/textview_release_date"
                app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>